# calibration_tricyle-like_robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_assingment.md  dataset.txt  devel_principle.txt  rebuild_dataset.py  tech_ToDoList.txt  view_traj.py
data/: calib_traj.csv  dataset.txt  dataset_w.csv  odometry_reconstructed.csv  reconstructed_input.csv  trajectory.csv  visualizer.ipynb
data/log/: calib_traj_robot.csv  calib_traj_sensor.csv  decoded_tick.csv  gt.csv  stats.csv  ticks.csv  trajectory_robot.csv  trajectory_sensor.csv  visualizer.ipynb
executable/: CMakeLists.txt  main.cpp
executable/script/: view_traj.py
include/: DataStruc.hpp
script/: jac_calc.m
src/: CMakeLists.txt  CalibrationEngine.cpp  DataManager.cpp  DataModule.cpp  DataSet.cpp  DataStruc.cpp  RobotDynamics.cpp  RobotModel.cpp  calibration_utility.cpp  data_reader.cpp  dataset.cpp  main.cpp  main_2.cpp  robotModels.cpp  robot_dynamics.cpp  robot_model.cpp  utility.cpp
src/header/: CalibrationEngine.hpp  DataManager.hpp  DataModule.hpp  DataSet.hpp  DataStruct.hpp  LS_Calibrator.hpp  RobotModel.hpp  calibration_utility.hpp  data_reader.hpp  dataset.hpp  robotModels.hpp  robot_dynamics.hpp  robot_model.hpp  utility.hpp
src/script/: view_log.py
src/testing/: gtest_main.cpp
